# info9014-krr-project

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  cineexplorer_ontology.ttl  m2_missing_items.md  project_statement.md
.claude/: settings.json
IMDB/: README.md  docker-compose.yml  imdb-schema.sql
database/: README.md  docker-compose.yml  imdb-schema.sql
deployment/: docker-compose.yml
docs/: ERD.drawio  Project outline and guidelines on deliverables.md  course_reference.md  db_reference.md  demonstrator_reference.md  erd_investigation.md  erd_specification.md  is_reference.md  mapping_reference.md  ontology_ql_profile.md  ontology_reference.md  plan.md  raw_imdb_analysis.md  report_reference.md  runbook.md  sparql_reference.md  tsv_inspection.md
mapping/: cineexplorer_mapping.ttl  mapping.properties
notebooks/: .gitignore  01_imdb_raw_analysis.ipynb  01_imdb_raw_analysis.py  02_column_distinct.ipynb  02_column_distinct.py  README.md  pyproject.toml
ontology/: cineexplorer_ontology.properties  cineexplorer_ontology.ttl
output/: catalog-v001.xml  cineexplorer_kg.properties  cineexplorer_kg.ttl
presentation/: README.md
report/: main.acn  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.ist  main.out  main.tex  main.toc  references.bib
shacl/: cineexplorer_episode_shape.ttl  cineexplorer_film_shape.ttl  cineexplorer_workedwith_shape.ttl  validation_report_episode_shape.ttl  validation_report_film_shape.ttl  validation_report_workedwith_shape.ttl
sparql/: cineexplorer_shapes.ttl  q01_films_genres.sparql  run_pairwise_bacon.py  (+14 more)
(+58 files in other folders)
