[project]
name = "cineexplorer-analysis"
version = "0.0.0"
description = "Exploratory analysis of the official IMDb non-commercial dataset to support ERD decisions for the CineExplorer KRR project."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.20",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "jupytext>=1.16",
    "pyarrow>=16",
    "rdflib>=7.6.0",
]

[tool.jupytext]
formats = "ipynb,py:percent"
